--- a/index.html
+++ b/index.html
@@ -23,15 +23,10 @@
                 <button class="btn btn-lg btn-success" onclick="calculate()">Convert</button>
             </div>
         </div>
-        <div class="output row">
-            <div class="col-8">
-                <label for="" class="form-text" id="typed-value"></label>
-            </div>
-            <div class="col-4">
-                <p id="result"></p>
-            </div>
+        <div id="output">
+            <label for="" class="form-text" id="typed-value"></label>
+            <p id="result"></p>
         </div>
-
     </div>
     <script src="main.js"></script>
 </body>
