--- a/index.html
+++ b/index.html
@@ -14,21 +14,32 @@
  </head>
 <body class="container-fluid" onload="init()">
     
-    <div class="main col-6 col-offset">
-        <h4 id="heading"></h4>
-        <div class="row">
-            <div class="col-10">
-                <input type="text" class="form-control form-control-lg text-muted" onkeydown="enteredValue()" type="text" id="rupee-value" placeholder="Enter amount in crore">
-            </div>
-            <div class="col-2">
-                <button class="btn btn-lg btn-success" onclick="calculate()">Convert</button>
+    <div class="row main-row">
+        <div class="main col-10">
+            <div class="box col-6 col-offset">
+                <h4 id="heading"></h4>
+                <div class="row">
+                    <div class="col-10">
+                        <input type="text" class="form-control form-control-lg text-muted" 
+                        onkeydown="enteredValue()" type="text" id="rupee-value" placeholder="amount in crore">
+                    </div>
+                    <div class="col-2">
+                        <button class="btn btn-lg btn-success" onclick="calculate()">Convert</button>
+                    </div>
+                </div>
+                <div id="output">
+                    <label class="form-text" id="typed-value"></label>
+                    <p id="result"></p>
+                </div>
             </div>
         </div>
-        <div id="output">
-            <label class="form-text" id="typed-value"></label>
-            <p id="result"></p>
+        <div class="sidebar col-2">
+            <p class="lead">Convert big no. like " 14 hundred thousand crore " to meaningful shorter 
+                USD values like $25 Billion to get a better sense and perspective.
+            </p>
         </div>
     </div>
+    
     <script src="main.js"></script>
 </body>
 </html>
