--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
         </div>
     </div>
-    
-    <script src="main.js"></script>
+    <script type='text/javascript' src='config.js'></script>
+    <script type='text/javascript' src="main.js"></script>
 </body>
 </html>
